--- a/design.css
+++ b/design.css
@@ -1,8 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 @font-face {
   font-family: "al_nevrada_personuploadedfile";
   src: url("al_nevrada_personaluseonly-webfont.woff2") format("woff2"), url("al_nevrada_personaluseonly-webfont.woff") format("woff");
@@ -10,6 +5,9 @@
   font-style: normal;
 }
 
+header {
+  display: flex;
+}
 body {
   background-color: #ffe9e0;
 }
@@ -17,25 +15,35 @@ nav {
   background-color: #fef5f0;
   display: flex;
   align-items: center;
-  margin-left: 1%;
-  margin-right: 1%;
-  margin-top: 2%;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 17px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .menu {
+  position: fixed;
   display: flex;
+
   list-style: none;
-  margin-left: 39%;
+  margin-left: 68%;
+  flex-grow: 1;
+  justify-content: flex-end;
 }
 
 .menu a {
-  display: block;
   text-decoration: none;
   color: #6e3e03;
   font-family: "al_nevrada_personuploadedfile";
-  padding: 29px;
-  font-size: 124%;
+  font-size: 19px;
+}
+
+.menu li {
+  display: flex;
+  display: inline-block;
+  margin-right: 17%;
 }
 
 header {
@@ -54,10 +62,11 @@ nav ul li a:active {
 
 nav .logo {
   background-image: url(billeder/idalogo.png);
-  width: 10%;
+  height: 64px;
   background-size: cover;
   aspect-ratio: 2/1;
-  margin-bottom: 0.5%;
+  margin-bottom: 0%;
+  margin-right: 50px;
 }
 
 /*Burgermenu*/
