--- a/design.css
+++ b/design.css
@@ -7,49 +7,51 @@
 
 header {
   display: flex;
+  background-color: #fef5f0;
+  margin-left: 1%;
+  margin-right: 1%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 body {
   background-color: #ffe9e0;
 }
 nav {
-  background-color: #fef5f0;
   display: flex;
   align-items: center;
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-top: 17px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  white-space: nowrap;
-  overflow: hidden;
+}
+.logo {
+  flex: 1;
+}
+.logopic {
+  background-image: url(billeder/idalogo.png);
+  width: 128px;
+  height: 65px;
+  aspect-ratio: 2/1;
+  background-size: cover;
+  margin-bottom: -1%;
+  margin-top: -1%;
 }
 
-.menu {
-  position: fixed;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-
-  list-style: none;
-  margin-left: 68%;
-  flex-grow: 1;
-  justify-content: flex-end;
 }
 
-.menu a {
+nav li {
+  margin-left: 10px;
+}
+
+nav a {
+  display: block;
+  padding: 20px;
   text-decoration: none;
   color: #6e3e03;
+  border: 2px solid transparent;
   font-family: "al_nevrada_personuploadedfile";
-  font-size: 19px;
-}
-
-.menu li {
-  display: flex;
-  display: inline-block;
-  margin-right: 17%;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  font-weight: 500;
+  font-size: 116%;
 }
 
 /*header*/
@@ -58,15 +60,6 @@ header {
 nav ul li a:hover,
 nav ul li a:active {
   color: #ea667f;
-}
-
-nav .logo {
-  background-image: url(billeder/idalogo.png);
-  height: 64px;
-  background-size: cover;
-  aspect-ratio: 2/1;
-  margin-bottom: 0%;
-  margin-right: 50px;
 }
 
 /*Burgermenu*/
@@ -92,6 +85,9 @@ nav .logo {
   }
   .burger {
     display: block;
+    padding-right: 57%;
+    margin-left: -15%;
+    margin-top: 35%;
   }
   .burger.active .line:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
@@ -107,12 +103,15 @@ nav .logo {
 
   nav.active .menu {
     display: block;
-    background-color: #bdffad;
+    background-color: #fef5f0;
     position: absolute;
-    top: 45px;
+    top: 74px;
     left: 0;
-    width: 100%;
+    width: 94%;
     z-index: 1;
+    margin-left: 3%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    padding-bottom: 81%;
   }
 
   nav.active .menu li {
@@ -121,5 +120,12 @@ nav .logo {
 
   nav.active .menu a {
     font-size: 24px;
+    text-align: center;
+  }
+  header {
+    padding-bottom: 2%;
+  }
+  nav ul li a:hover {
+    color: #ea667f;
   }
 }
