--- a/design.css
+++ b/design.css
@@ -20,6 +20,52 @@
   text-decoration: none;
 }
 
+/** drop down menu*/
+
+nav .drop-down {
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  height: 90px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 139.5px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 3.5%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
+
+nav .drop-down.closed {
+  /*  When toggled via jQuery this class will reduce the height of the ul which inconjuction
+      with overflow: hidden set on the ul will hide all list items apart from the first */
+  /* current li height 38px + 5px border */
+  height: 42px;
+  margin-top: 0%;
+}
+
+nav .drop-down li a {
+  display: block;
+  color: #6e3e03;
+  text-decoration: none;
+  padding: 10px; /* Larger touch target area */
+}
+
+nav .drop-down li:first-child a:after {
+  content: "\25BC";
+  float: right;
+  margin-left: -1px; /* Excessive -margin to bring link text back to center */
+  margin-right: 5px;
+}
+
+.border {
+  border-style: solid;
+  color: #ea667f;
+}
+
+/*FINISHED*/
+
 body {
   background-color: #ffe9e0;
 }
@@ -36,7 +82,8 @@ nav {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   margin-left: 3%;
   margin-top: 1%;
-  position: fixed;
+  position: relative; /* Create a new stacking context */
+  z-index: 1000; /* Increase the z-index value of the parent element */
 }
 
 .logopic {
@@ -45,9 +92,10 @@ nav {
   height: 65px;
   aspect-ratio: 2/1;
   background-size: cover;
-  margin-bottom: -1%;
-  margin-top: -6%;
-  margin-left: -73%;
+  position: absolute;
+  top: 1.5%;
+  left: 3%;
+  z-index: 1001;
 }
 
 nav ul {
@@ -68,7 +116,6 @@ nav ul li a {
   padding: 8px 15px;
   border-radius: 5px;
   letter-spacing: 1px;
-  transition: all 0.3s ease;
   font-family: "al_nevrada_personuploadedfile";
 }
 
@@ -108,7 +155,7 @@ input[type="checkbox"] {
   height: 70%;
   position: fixed;
   margin-left: 3%;
-  top: 18%;
+  top: 16%;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
 }
@@ -120,8 +167,8 @@ footer {
   padding-top: 3%;
   margin-left: 3%;
   display: flex;
-  position: fixed;
-  margin-top: 43%;
+  position: relative;
+  margin-top: 36.5%;
 }
 
 .socials {
