--- a/design.css
+++ b/design.css
@@ -22,13 +22,13 @@
 
 /** drop down menu*/
 
-nav .drop-down {
+nav .drop-down1 {
+  height: 90px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 139.5px;
+  margin-left: 23%;
   list-style: none;
   overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
   overflow: hidden;
-  height: 90px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
-  width: 139.5px;
-  margin: 0 auto;
   padding: 0;
   text-align: center;
   position: absolute;
@@ -37,28 +37,184 @@ nav .drop-down {
   background-color: #fef5f0;
 }
 
-nav .drop-down.closed {
-  /*  When toggled via jQuery this class will reduce the height of the ul which inconjuction
-      with overflow: hidden set on the ul will hide all list items apart from the first */
-  /* current li height 38px + 5px border */
+nav .drop-down1.closed {
+  margin-left: 23%;
   height: 42px;
   margin-top: 0%;
 }
 
-nav .drop-down li a {
+nav .drop-down1 li a {
   display: block;
   color: #6e3e03;
   text-decoration: none;
   padding: 10px; /* Larger touch target area */
 }
 
-nav .drop-down li:first-child a:after {
+nav .drop-down1 li:first-child a:after {
   content: "\25BC";
   float: right;
   margin-left: -1px; /* Excessive -margin to bring link text back to center */
   margin-right: 5px;
 }
 
+nav .drop-down2 {
+  height: 130px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 210.5px;
+  margin-left: 37%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 7%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
+
+nav .drop-down2.closed {
+  margin-left: 37%;
+  height: 42px;
+  margin-top: 0%;
+}
+
+nav .drop-down2 li a {
+  display: block;
+  color: #6e3e03;
+  text-decoration: none;
+  padding: 10px; /* Larger touch target area */
+}
+
+nav .drop-down2 li:first-child a:after {
+  content: "\25BC";
+  float: right;
+  margin-left: -1px; /* Excessive -margin to bring link text back to center */
+  margin-right: 5px;
+}
+
+nav .drop-down2:hover {
+  z-index: 1001;
+}
+
+nav .drop-down3 {
+  height: 130px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 125.5px;
+  margin-left: 50%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 7%;
+  z-index: 1001;
+  background-color: #fef5f0;
+}
+
+nav .drop-down3.closed {
+  margin-left: 47%;
+  height: 42px;
+  margin-top: 0%;
+}
+
+nav .drop-down3 li a {
+  display: block;
+  color: #6e3e03;
+  text-decoration: none;
+  padding: 10px; /* Larger touch target area */
+}
+
+nav .drop-down3 li:first-child a:after {
+  content: "\25BC";
+  float: right;
+  margin-left: -1px; /* Excessive -margin to bring link text back to center */
+  margin-right: 5px;
+}
+
+nav .drop-down3 {
+  height: 130px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 125.5px;
+  margin-left: 47%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 7%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
+
+nav .drop-down3:hover {
+  z-index: 1001;
+}
+nav .drop-down4 {
+  height: 30px;
+  width: 155.5px;
+  margin-left: 54%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 0%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
+nav .drop-down5 {
+  height: 130px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
+  width: 137.5px;
+  margin-left: 67%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 7%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
+
+nav .drop-down5.closed {
+  margin-left: 67%;
+  height: 42px;
+  margin-top: 0%;
+}
+
+nav .drop-down5 li a {
+  display: block;
+  color: #6e3e03;
+  text-decoration: none;
+  padding: 10px; /* Larger touch target area */
+}
+
+nav .drop-down5 li:first-child a:after {
+  content: "\25BC";
+  float: right;
+  margin-left: -1px; /* Excessive -margin to bring link text back to center */
+  margin-right: 5px;
+}
+
+nav .drop-down5:hover {
+  z-index: 1001;
+}
+nav .drop-down6 {
+  height: 23px;
+  width: 117.5px;
+  margin-left: 79%;
+  list-style: none;
+  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  margin-top: 0%;
+  z-index: 1000;
+  background-color: #fef5f0;
+}
 .border {
   border-style: solid;
   color: #ea667f;
@@ -147,6 +303,7 @@ input[type="checkbox"] {
   left: 66%;
   top: 12.3%;
   pointer-events: none;
+  z-index: 800;
 }
 
 .box {
