--- a/design.css
+++ b/design.css
@@ -429,23 +429,23 @@ footer {
 }
 
 .knap {
-  width: 100%;
+  width: 10%;
   height: 5%;
   margin-top: -6%;
   margin-left: 0%;
 }
 .knapbbypink {
   background-color: #ffe9e0;
-  width: 22%;
+  width: 243%;
   height: 244%;
   border-radius: 60px;
-  margin-top: -8%;
-  margin-left: 34%;
+  top: -135%;
+  left: 347%;
   z-index: 500;
   position: relative;
 }
 
-.knaptxt {
+#knaptxt {
   font-family: "al_nevrada_personuploadedfile";
   color: #6e3e03;
   font-size: 160%;
@@ -455,11 +455,11 @@ footer {
 
 .knappink {
   background-color: #ea667f;
-  width: 22%;
+  width: 243%;
   height: 244%;
   border-radius: 60px;
-  margin-top: -4.3%;
-  margin-left: 36%;
+  top: -378.3%;
+  left: 369%;
   z-index: 400;
   position: relative;
 }
@@ -505,12 +505,16 @@ footer {
 
 #ommigknap {
   position: absolute;
-  top: 112%;
+  top: 94%;
   left: -2%;
 }
 
-#ommigknaptxt {
+.knaptxt {
   font-family: "playfair_displayregular";
+  color: #6e3e03;
+  font-size: 160%;
+  text-align: center;
+  padding-top: 5%;
 }
 
 /*CV SIDE */
@@ -578,6 +582,94 @@ footer {
 .cv3 {
   grid-column: 2;
   grid-row: 7;
+}
+
+/*WEB*/
+#web1knap {
+  position: absolute;
+  top: 77%;
+  left: -29%;
+  font-family: "playfair_displayregular";
+}
+
+#web2knap {
+  position: absolute;
+  top: 77%;
+  left: 2%;
+  font-family: "playfair_displayregular";
+}
+
+.overskrift {
+  color: #ea667f;
+  font-family: "al_nevrada_personuploadedfile";
+  font-size: 190%;
+}
+
+.web_overskrift1 {
+  position: absolute;
+  top: 44%;
+  left: 7.5%;
+}
+
+.web_overskrift2 {
+  position: absolute;
+  top: 44%;
+  left: 43%;
+}
+
+/*UX*/
+#ux1knap {
+  position: absolute;
+  top: 77%;
+  left: -29%;
+  font-family: "playfair_displayregular";
+}
+
+#ux2knap {
+  position: absolute;
+  top: 77%;
+  left: 2%;
+  font-family: "playfair_displayregular";
+}
+
+.ux_overskrift1 {
+  position: absolute;
+  top: 44%;
+  left: 12.5%;
+}
+
+.ux_overskrift2 {
+  position: absolute;
+  top: 44%;
+  left: 43%;
+}
+
+/*INDHOLD*/
+
+#indhold1knap {
+  position: absolute;
+  top: 77%;
+  left: -29%;
+  font-family: "playfair_displayregular";
+}
+
+#indhold2knap {
+  position: absolute;
+  top: 77%;
+  left: 2%;
+  font-family: "playfair_displayregular";
+}
+
+.indhold_overskrift1 {
+  position: absolute;
+  top: 44%;
+  left: 9.7%;
+}
+
+.indhold_overskrift2 {
+  position: absolute;
+  top: 44%;
+  left: 43%;
 }
 
 @media (max-width: 1000px) {
