--- a/design.css
+++ b/design.css
@@ -35,6 +35,7 @@ nav .drop-down1 {
   margin-top: 3.5%;
   z-index: 1000;
   background-color: #fef5f0;
+  transition: 0.2s ease;
 }
 
 nav .drop-down1.closed {
@@ -70,6 +71,7 @@ nav .drop-down2 {
   margin-top: 7%;
   z-index: 1000;
   background-color: #fef5f0;
+  transition: 0.2s ease;
 }
 
 nav .drop-down2.closed {
@@ -94,21 +96,6 @@ nav .drop-down2 li:first-child a:after {
 
 nav .drop-down2:hover {
   z-index: 1001;
-}
-
-nav .drop-down3 {
-  height: 130px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
-  width: 125.5px;
-  margin-left: 50%;
-  list-style: none;
-  overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
-  overflow: hidden;
-  padding: 0;
-  text-align: center;
-  position: absolute;
-  margin-top: 7%;
-  z-index: 1001;
-  background-color: #fef5f0;
 }
 
 nav .drop-down3.closed {
@@ -144,6 +131,7 @@ nav .drop-down3 {
   margin-top: 7%;
   z-index: 1000;
   background-color: #fef5f0;
+  transition: 0.2s ease;
 }
 
 nav .drop-down3:hover {
@@ -176,6 +164,7 @@ nav .drop-down5 {
   margin-top: 7%;
   z-index: 1000;
   background-color: #fef5f0;
+  transition: 0.2s ease;
 }
 
 nav .drop-down5.closed {
@@ -401,6 +390,17 @@ footer {
   left: 63%;
 }
 
+/* ::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ea667f;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+} */
+
 /**INDHOLD PÅ INDEX SIDEN**/
 
 .indexlogo {
@@ -451,6 +451,7 @@ footer {
   font-size: 160%;
   text-align: center;
   padding-top: 6%;
+  margin-left: 32%;
 }
 
 .knappink {
@@ -462,6 +463,35 @@ footer {
   left: 369%;
   z-index: 400;
   position: relative;
+}
+
+/*forsøg på animation af knap*/
+.knapbbypink {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s ease-in;
+}
+
+.knapbbypink span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s ease-in;
+}
+
+.knapbbypink:hover {
+  left: 369%;
+  border: 5px solid #ea667f;
+}
+
+.knapbbypink:hover span,
+.knapbbypink:hover #knaptxt {
+  color: #ea667f;
+}
+
+.knapbbypink:hover #knaptxt {
+  margin-top: -1.1%;
 }
 
 /*OMG MIG SIDE*/
@@ -615,6 +645,227 @@ footer {
   position: absolute;
   top: 44%;
   left: 43%;
+}
+/*STUDIESTARTSPRØVE*/
+.studiegallery {
+  width: 22%;
+  height: 57vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 53%;
+  margin-top: 7%;
+  flex-direction: column;
+}
+.studieimgbox {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.studieimg {
+  width: 62px;
+  height: 63px;
+  margin-left: 85%;
+  margin: 3px;
+  border-radius: 50px;
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/studiestart1.png);
+  background-size: cover;
+  background-position: center;
+  transition: width 0.5s ease-in-out;
+  flex-direction: column;
+}
+.studieimg:nth-child(2) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/studiestart2.png);
+  background-size: cover;
+  background-position: center;
+}
+.studieimg:nth-child(3) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/studiestart3.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.studieimg:nth-child(4) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/studiestart4.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.studie1:hover {
+  background: url(billeder/studiestart1.png);
+  background-size: cover;
+}
+
+.studie2:hover {
+  background: url(billeder/studiestart2.png);
+  background-size: cover;
+}
+
+.studie3:hover {
+  background: url(billeder/studiestart3.png);
+  background-size: cover;
+}
+
+.studie4:hover {
+  background: url(billeder/studiestart4.png);
+  background-size: cover;
+}
+.studieimg:hover {
+  width: 404px;
+  height: 275px;
+  margin-right: 78%;
+  cursor: pointer;
+}
+
+.studiegrid {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 25% 25% 25%;
+  margin-top: -32%;
+  margin-left: 5%;
+  margin-right: 73%;
+}
+
+.studiestartoverskrift1 {
+  grid-column: 1;
+  grid-row: 1;
+  color: #ea667f;
+  font-family: "al_nevrada_personuploadedfile";
+  margin-bottom: 11%;
+  margin-left: -15%;
+  margin-top: -10%;
+}
+
+.studiestartoverskrift2 {
+  grid-column: 1;
+  grid-row: 2;
+  color: #ea667f;
+  font-family: "al_nevrada_personuploadedfile";
+}
+
+.studiestarttxt {
+  grid-column: 1;
+  grid-row: 3;
+  color: #6e3e03;
+  font-family: "playfair_displayregular";
+}
+#studiestartknap {
+  position: absolute;
+  top: 105%;
+  left: -33%;
+}
+
+/*EMNESITE*/
+.emnegallery {
+  width: 22%;
+  height: 57vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 53%;
+  margin-top: 7%;
+  flex-direction: column;
+}
+.emneimgbox {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.emneimg {
+  width: 62px;
+  height: 63px;
+  margin-left: 85%;
+  margin: 3px;
+  border-radius: 50px;
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/emnesite1.png);
+  background-size: cover;
+  background-position: center;
+  transition: width 0.5s ease-in-out;
+  flex-direction: column;
+}
+.emneimg:nth-child(2) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/emnesite2.png);
+  background-size: cover;
+  background-position: center;
+}
+.emneimg:nth-child(3) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/emnesite3.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.emneimg:nth-child(4) {
+  background: linear-gradient(#ea667e53, #ea667e53), url(billeder/emnesite4.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.emne1:hover {
+  background: url(billeder/emnesite1.png);
+  background-size: cover;
+}
+
+.emne2:hover {
+  background: url(billeder/emnesite2.png);
+  background-size: cover;
+}
+
+.emne3:hover {
+  background: url(billeder/emnesite3.png);
+  background-size: cover;
+}
+
+.emne4:hover {
+  background: url(billeder/emnesite4.png);
+  background-size: cover;
+}
+.emneimg:hover {
+  width: 404px;
+  height: 275px;
+  margin-right: 78%;
+  cursor: pointer;
+}
+
+.emnegrid {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 25% 25% 25%;
+  margin-top: -32%;
+  margin-left: 5%;
+  margin-right: 73%;
+}
+
+.emneoverskrift1 {
+  grid-column: 1;
+  grid-row: 1;
+  color: #ea667f;
+  font-family: "al_nevrada_personuploadedfile";
+  margin-bottom: 11%;
+  margin-left: -15%;
+  margin-top: -10%;
+}
+
+.emneoverskrift2 {
+  grid-column: 1;
+  grid-row: 2;
+  color: #ea667f;
+  font-family: "al_nevrada_personuploadedfile";
+}
+
+.emnetxt {
+  grid-column: 1;
+  grid-row: 3;
+  color: #6e3e03;
+  font-family: "playfair_displayregular";
+}
+#emneknap {
+  position: absolute;
+  top: 105%;
+  left: -33%;
 }
 
 /*UX*/
